2003-11-05  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: don't add the leading command if it is a simple 
	command to all the paragraphs in itemize and add it before the 
	paragraph or preformatted section.

2003-11-05  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: in itemize, apply the command to the
	inside of the paragraph or preformatted section.
	titlefont don't open paragraphs.

2003-11-02  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: keep texi as is in @image and protect html characters.
	accept @| as macro, but remove it.
	cleaning of code for commands with texi kept as is
	* doc/formatting.texi: add test of flushleft, flushright and center

2003-11-02  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: -- and so on are kept as is in @image except
	for alt text. Use alt text. File for image is really used, too.
	handle better @inforef.
	* doc/clean.texi: add formatting/clean.texi, a test for code 
	acceptable by makeinfo without error.

2003-10-28  Patrice Dumas  <dumas@centre-cired.fr>

	* doc/texi2html.texi: add informations about internationalization

2003-10-28  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: if not split and there is a leading directory 
	specified with --out, create that directory.
	If a directory creation fails, abort.
	test the writability of the results directory, even when it is
	the current directory.

2003-10-28  Patrice Dumas  <dumas@centre-cired.fr>

	* doc/: remove unneeded .texi files, now included in texi2html.texi.
	* Makefile.am, doc/Makefile.am: include info file in distribution.

2003-10-26  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: support for @verbatiminclude. When split use the
	-output specification in every cases.
	* texi2html.init: use `&bull;' instead of `*' for node menu entries.
	* Makefile.am: fixes for the inclusion of files in packages.
	* doc/texi2html.texi: add the explanation of the default for all the