@@ -5318,7 +5318,7 @@
 ../singular_texi/general.tex(,4409) ////////////////////////////////////////////////////////////////////
 ../singular_texi/general.tex(,4410) // version string automatically expanded by CVS
 ../singular_texi/general.tex(,4411) 
-../singular_texi/general.tex(,4412) version="$Id: sing.passtexi,v 1.17 2003-11-05 10:09:18 pertusus Exp $";
+../singular_texi/general.tex(,4412) version="$Id: sing.passtexi,v 1.18 2003-11-05 23:05:09 pertusus Exp $";
 ../singular_texi/general.tex(,4413) category="Miscellaneous";
 ../singular_texi/general.tex(,4414) // summary description of the library
 ../singular_texi/general.tex(,4415) info="
