@@ -1,0 +1,144 @@
+# -*-perl-*-
+
+$SPLIT = 'none';
+
+$print_section            = \&T2H_NOHEAD_print_section;
+$end_section              = \&T2H_NOHEAD_end_section;
+$one_section              = \&T2H_NOHEAD_one_section;
+$print_Top_header         = \&T2H_NOHEAD_print_Top_header;
+$print_Top_footer	      = \&T2H_NOHEAD_print_Top_footer;
+$print_misc_header	      = \&T2H_NOHEAD_print_misc_header;
+$print_misc_footer	      = \&T2H_NOHEAD_print_misc_footer;
+$print_misc		      = \&T2H_NOHEAD_print_misc;
+$print_head_navigation    = \&T2H_NOHEAD_print_head_navigation;
+$about_body		      = \&T2H_NOHEAD_about_body;
+#$toc_body                 = \&T2H_NOHEAD_toc_body;
+
+########################################################################
+# Layout for html for every sections
+#
+sub T2H_NOHEAD_print_section
+{
+    my $fh = shift;
+    my $first_in_page = shift;
+    my $previous_is_top = shift;
+
+    if ($first_in_page)
+    {
+        &$print_head_navigation($fh);
+    }
+    else
+    { # got to do this here, as it isn't done in print_head_navigation
+        main::print_lines($fh, $Texi2HTML::THIS_HEADER);
+    }
+    my $nw = main::print_lines($fh);
+}
+
+sub T2H_NOHEAD_one_section($)
+{
+    my $fh = shift;
+    main::print_lines($fh);
+    print $fh "$SMALL_RULE\n";
+    &$print_page_foot($fh);
+}
+
+###################################################################
+# Layout of top-page I recommend that you use @ifnothtml, @ifhtml,
+# @html within the Top texinfo node to specify content of top-level
+# page.
+#
+# If you enclose everything in @ifnothtml, then title, subtitle,
+# author and overview is printed
+# Texi2HTML::HREF of Next, Prev, Up, Forward, Back are not defined
+# if $T2H_SPLIT then Top page is in its own html file
+sub T2H_NOHEAD_print_Top_header
+{
+    my $fh = shift;
+    &$print_head_navigation($fh);
+}
+sub T2H_NOHEAD_print_Top_footer
+{
+    my $fh = shift;
+    print $fh "$BIG_RULE\n";
+}
+sub T2H_NOHEAD_print_Top
+{
+    my $fh = shift;
+    my $has_top_heading = shift;
+
+    &$print_Top_header($fh);
+    if ($Texi2HTML::THIS_SECTION)
+    {
+        # if top-level node has content, then print it with extra header
+        #print $fh "<h1>$Texi2HTML::NAME{Top}</h1>\n"
+        print $fh "<h1 class=\"settitle\">$Texi2HTML::NAME{Top}</h1>\n"
+            unless ($has_top_heading);
+        main::print_lines($fh, $Texi2HTML::THIS_SECTION)
+    }
+    else
+    {
+        # top-level node is fully enclosed in @ifnothtml
+        # print fulltitle, subtitle, author, Overview
+        print $fh
+            "<div align=\"center\">\n<h1>",
+                join("</h1>\n<h1>", split(/\n/,  $Texi2HTML::THISDOC{fulltitle})),
+                    "</h1>\n";
+        print $fh "<h2>$Texi2HTML::THISDOC{subtitle}</h2>\n"
+          if $Texi2HTML::THISDOC{subtitle};
+        print $fh "$Texi2HTML::THISDOC{author}\n" if $Texi2HTML::THISDOC{author};
+        print $fh <<EOT;
+</div>
+$DEFAULT_RULE
+<p></p>
+EOT
+        print $fh '<h2> ' . &$I('Overview') . ": </h2>\n"
+             . "<blockquote>\n";
+        $nw = main::print_lines($fh, $Texi2HTML::OVERVIEW);
+        print $fh "</blockquote>\n";
+    }
+    &$print_Top_footer($fh);
+}
+
+###################################################################
+# Layout of Toc, Overview, and Footnotes pages
+# By default, we use "normal" layout
+# Texi2HTML::HREF of Next, Prev, Up, Forward, Back, etc are not defined
+# use: my $buttons = [...] to redefine navigation buttons
+sub T2H_NOHEAD_print_misc_header
+{
+    my $fh = shift;
+    &$print_head_navigation($fh);
+}
+sub T2H_NOHEAD_print_misc_footer
+{
+    my $fh = shift;
+    print $fh "$SMALL_RULE\n";
+}
+sub T2H_NOHEAD_print_misc
+{
+    my $fh = shift;
+    &$print_misc_header($fh);
+    print $fh "<h1>$Texi2HTML::NAME{This}</h1>\n";
+    main::print_lines($fh);
+    &$print_misc_footer($fh);
+}
+
+sub T2H_NOHEAD_end_section($)
+{
+    my $fh = shift;
+    print $fh "$MIDDLE_RULE\n";
+}
+
+###################################################################
+# Layout of navigation panel
+
+sub T2H_NOHEAD_print_head_navigation
+{
+    my $fh = shift;
+    main::print_lines($fh, $Texi2HTML::THIS_HEADER);
+}
+
+sub T2H_NOHEAD_about_body
+{
+}
+
