@@ -1,3 +1,8 @@
+2003-11-06  Patrice Dumas  <dumas@centre-cired.fr>
+
+	* texi2html.pl: the style is applied by a customizable function.
+	* examples/noheader.init: style with no headers.
+
 2003-11-05  Patrice Dumas  <dumas@centre-cired.fr>
 
 	* texi2html.pl: don't add the leading command if it is a simple 
